Worked on the ZK login

--- a/env.example
+++ b/env.example
@@ -22,3 +22,12 @@ VITE_MAX_FILE_SIZE=5242880
 # Feature Flags
 VITE_ENABLE_ANALYTICS=false
 VITE_ENABLE_DEBUG_MODE=true
+
+# Google OAuth Configuration (for SUI ZK Login)
+# Get these values from Google Cloud Console
+VITE_GOOGLE_CLIENT_ID=your_google_client_id_here
+VITE_GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+
+# SUI Network Configuration
+VITE_SUI_NETWORK=testnet
+VITE_SUI_RPC_URL=https://fullnode.testnet.sui.io:443
