--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "@relume_io/relume-ui": "latest",
-    "@supabase/supabase-js": "^2.38.0",
-    "@mui/material": "^5.15.6",
-    "@mui/icons-material": "^5.15.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@mysten/sui": "^1.0.0",
+    "@mysten/sui.js": "^0.54.1",
+    "@relume_io/relume-ui": "latest",
+    "@supabase/supabase-js": "^2.38.0",
     "framer-motion": "^10.16.16",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
     "@relume_io/relume-tailwind": "latest",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
