--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "@relume_io/relume-ui": "latest",
-    "@supabase/supabase-js": "^2.38.0",
-    "@mui/material": "^5.15.6",
-    "@mui/icons-material": "^5.15.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@mysten/sui": "^1.38.0",
+    "@relume_io/relume-ui": "latest",
+    "@supabase/supabase-js": "^2.38.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
